# lachasseautresor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  install_crewai.py  pyproject.toml  requirements.txt  test_clean.py  test_imports.py  test_simple.py
.claude/: settings.local.json
brief/: PRD_CrewAI_Adventure_Book_Generator.md  book_golden_bullets.json  concept.md  output_format_exemple.md
output/markdown/: lachasseautresor_latlantide_retrouvée_crewai_v2_20250831_004404.md  lachasseautresor_les_mystères_datlantide_test_20250830_231610.md  lachasseautresor_les_mystères_du_mont-saint-michel_test_20250830_234806.md  lachasseautresor_les_secrets_du_mont-saint-michel_test_20250830_231052.md  lachasseautresor_les_trésors_de_petra_test_20250830_231413.md
src/: __init__.py  crewai_generator_v2.py  main.py  simple_generator.py
src/crewai_config/: agents.yaml  tasks.yaml
src/crewai_tools/: __init__.py  chasse_tresor_tools.py
src/utils/: __init__.py  file_handler.py  json_formatter.py
